# EIT_ROWR_R4

./: Dockerfile  README.md  docker-compose.yml  main.c  makefile  terminal.c  terminal.h
Code/: basic.h  print.c  print.h  serial.c  serial.h
Code/Microcontroller/Libraries/: AVRlib.h  I2CControl.c  I2CControl.h  ServoControl.c  ServoControl.h
Figures/Diagrams/: Systems_diagram.drawio
Presentations/: Team R4 – Ghost Trawler halfway point.pptx
board_interface/: CMakeLists.txt  package.xml
board_interface/scripts/: blinker.py  board.py  pinger.py  test.py
code/: main.c  makefile
final-code/: main.c  makefile
kalibr_data/: calibtarget.yaml  camera_static-camchain.yaml  camera_static-results-cam.txt
motion/: CMakeLists.txt  package.xml
motion/scripts/: altitude_controller.py  blinker.py  board.py  servo_client.py  servo_interface.py  servo_server.py
motion/scripts/main/: main.c  makefile  servo_client.py  servo_server.py  test.py
setup/: CMakeLists.txt  package.xml
setup/config/: ghost_trawler.yaml
setup/launch/: ghost_trawler.launch
sim/: Perlin.c  Perlin.h  main.c  makefile  program
