<?xml version="1.0"?>
<package format="2">
  <name>board_interface</name>
  <version>0.0.0</version>
  <description>Tools for interfacing with the PCB</description>
  <maintainer email="viktor.enaas@gmail.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
