<?xml version="1.0"?>
<package format="2">
  <name>drone_setup</name>
  <version>0.0.0</version>
  <description>The drone_setup package</description>
  <maintainer email="viktorn@stud.ntnu.no">christopher</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

 </package>